# TakeMe

./: .gitignore  README.md  pyproject.toml  setup.py
docker/: Dockerfile  backup.sh  dbupdate.sh  deploy.sh  docker-compose.yaml  restore.sh
docker/backup/: backup2024-01-25.tar
hcit/: __init__.py  database.py  form.py  login.py  pages.py
hcit/api/: __init__.py
hcit/api/resource/: __init__.py
hcit/static/: styles.css
hcit/static/css/: styles.css
hcit/static/js/: test.js
hcit/templates/: add.html  base.html  header.html  home.html  login.html  register.html  test.html
hcit/ui/: __init__.py
hcit/ui/auth/: __init__.py
hcit/ui/resource/: __init__.py
migrations/versions/: 2117a4926432_add_message_field_to_resource.py  229543004f9e_.py  7a8f66ffbb00_.py  96f3ea4d0f7a_update_resource_model_2.py  d1c9f74242e0_tested_in_field.py  e607dc2b2e30_new_settings_db.py  e61ecff99129_add_history_to_the_resource.py  e87895ca2185_update_resource_model.py
takeme/: __init__.py  database.py  form.py  login.py  run.py  scheduler.py
takeme/api/: __init__.py
takeme/api/resource/: __init__.py
takeme/static/css/: styles.css
takeme/static/js/: modal.js  resource.js  sync.js
takeme/templates/: add.html  base.html  home.html  login.html  register.html  resource.html  resource_item.html  resource_list_item.html  resource_macro.html  settings.html
takeme/ui/: __init__.py
takeme/ui/auth/: __init__.py
takeme/ui/resource/: __init__.py
